# mirage

./: .gitignore  .history.json  .music_history.json  GEMINI.md  envfile.txt  mirage.py  prp.txt  pyproject.toml
src/mirage/: config.py  main.py  planner.py
src/mirage/templates/: index.html.j2  research.html.j2
tests/: test_config.py
