[project]
name = "mirage"
version = "0.12.6"
description = "A powerful AI orchestration CLI for generating multimedia atmospheric experiences, documentaries, and stories."
readme = "README.md"
authors = [
    { name = "Chuck", email = "charles.forsyth@ucr.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "requests>=2.31.0",
    "rich>=14.2.0",
]

[project.scripts]
mirage = "mirage.main:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "types-setuptools>=80.9.0.20251223",
]
